intTests/test_type_errors/unify011.log.good
Loading file "unify011.saw"
Type errors:
  unify011.saw:12:2-12:19: Monadic bind of non-monadic value; rewrite as let-binding or use return
  unify011.saw:12:14-12:19: Type mismatch.
    Mismatch of type constructors. Expected: Int but got String
    unify011.saw:12:6-12:9: The type Int arises from this type annotation
    unify011.saw:12:14-12:19: The type String arises from the type of this term

    Expected: Int
    Found:    String

    within "<toplevel>" (unify011.saw:12:2-12:19)


FAILED
